<resources>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_remove">Remove</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="first_name">First Name</string>
    <string name="sur_name">Surname</string>
    <string name="second_name">Second Name</string>
    <string name="save">Save</string>
    <string name="title_activity_add_facility">Add Facility</string>
    <string name="fac_name">Facility Name</string>
    <string name="fac_desc">Facility Description</string>
    <string name="fac_name_validation_msg">Please fill in facility name</string>
    <string name="fac_desc_validation_msg">Please fill in facility description</string>
    <string name="first_name_validation_msg">Please fill in first name</string>
    <string name="second_name_validation_msg">Please fill in second name</string>
    <string name="sur_name_validation_msg">Please fill in surname</string>
    <string name="mem_select_validation_msg">Please select a member</string>
    <string name="fac_select_validation_msg">Please select a facility</string>
    <string name="save_successful">Saved successfully!</string>
    <string name="generic_error">Sorry something went wrong! We\'re looking into it!</string>
    <string name="empty_value">Add new ones to appear here!!</string>
    <string name="date_select">Date</string>
    <string name="strt_time_select">Start Time</string>
    <string name="end_time_select">End Time</string>
    <string name="title_activity_add_booking">Add Booking</string>
    <string name="txt_member">Member</string>
    <string name="txt_facility">Facility</string>
    <string name="st_time_et_time_validation_msg">Start time should be greater than End time</string>
    <string name="date_validation_msg">Please select a valid date for booking</string>
    <string name="time_validation_msg">Please select a valid time for booking</string>
    <string name="category_name">Category Name</string>
    <string name="category_code">Code</string>
    <string name="category_description">Description</string>
    <string name="category_reminder">Reminder</string>
    <string name="btn_update">Update</string>
    <string name="title_activity_update_facility">Update Category</string>
    <string name="title_activity_update_member">Update Member</string>




    <string name="app_name">Medicine Management</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_desc">Medicine Description</string>

    <string name="cat_id">Category Type</string>
    <string name="reminder">Reminder</string>
    <string name="quantity">Quantity</string>
    <string name="dosage">Dosage</string>
    <string name="threshold">Threshold</string>
    <string name="date_issued">Date Issued</string>
    <string name="expiry_factor">Expiry Factor</string>

    <string name="med_name_validation_msg">Please fill in medicine name</string>
    <string name="med_desc_validation_msg">Please fill in medicine description</string>
    <string name="cat_id_validation_msg">Please choose category</string>
    <string name="title_activity_add_medicine">Add Medicine</string>

    <string name="category">Category</string>

    <string name="cat">CATEGORY</string>
    <string name="code">Code</string>

    <string-array name="categoryNames">
        <item>Supplement</item>
        <item>Chronic</item>
        <item>Incidental</item>
        <item>Complete Course</item>
        <item>Self Apply</item>
    </string-array>

</resources>
