<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sg.edu.nus.clubmanagement.activity.AddBookingActivity"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txt_member"
          android:layout_marginLeft="22dp"
          android:layout_marginStart="22dp"
          android:layout_marginTop="20dp"
          android:id="@+id/tv_member"
          android:textStyle="bold"
          />
      <Spinner
          android:id="@+id/spn_member"
          android:layout_below="@id/tv_member"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:layout_marginEnd="20dp"
          android:layout_marginTop="10dp"
          >
      </Spinner>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txt_facility"
          android:layout_below="@id/spn_member"
          android:layout_marginLeft="22dp"
          android:layout_marginStart="22dp"
          android:layout_marginTop="20dp"
          android:id="@+id/tv_facility"
          android:textStyle="bold"
          />
      <Spinner
          android:id="@+id/spn_facility"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:layout_marginEnd="20dp"
          android:layout_marginTop="10dp"
          android:layout_below="@id/tv_facility"
          >
      </Spinner>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/spn_facility"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            android:text="@string/date_select"
            android:textStyle="bold"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />
        <EditText
            android:id="@+id/et_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_select"
            android:layout_below="@id/tv_date"
            android:layout_alignLeft="@id/tv_date"
            android:layout_alignStart="@id/tv_date"
            android:inputType="date"
            android:focusable="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_stTime"
            android:text="@string/strt_time_select"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_alignBaseline="@id/tv_date"
            />
        <EditText
            android:id="@+id/et_select_strt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/strt_time_select"
            android:layout_toRightOf="@id/et_select_date"
            android:layout_toEndOf="@id/et_select_date"
            android:layout_alignStart="@id/tv_stTime"
            android:layout_alignLeft="@id/tv_stTime"
            android:focusable="false"
            android:inputType="datetime"
            android:layout_alignBaseline="@id/et_select_date"
            />
        <EditText
            android:id="@+id/et_select_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/end_time_select"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/et_select_date"
            android:inputType="datetime"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_etTime"
            android:text="@string/end_time_select"
            android:layout_alignBaseline="@id/tv_stTime"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_alignLeft="@id/et_select_end_time"
            android:layout_alignStart="@id/et_select_end_time"
            />
      </RelativeLayout>
    </RelativeLayout>
  </ScrollView>
  <Button
      android:id="@+id/btn_save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_margin="20dp"
      android:background="@color/colorPrimary"
      android:text="@string/save"
      android:textColor="@android:color/white"
      />
</RelativeLayout>
